# astNIX

./: README.md  commits.html
.github/workflows/: build.yml
base/applications/winver/: winver.c
base/services/umpnpmgr/: rpcserver.c
base/shell/explorer/: settings.cpp  trayclock.cpp
boot/bootdata/: hivesft.inf  hivesys.inf  txtsetup.sif
dll/appcompat/apphelp/: apphelp.spec
dll/cpl/desk/: screensaver.c
dll/directx/: CMakeLists.txt
dll/directx/wine_vista/: CMakeLists.txt
dll/directx/wine_vista/d2d1/: CMakeLists.txt  bitmap.c  bitmap_render_target.c  brush.c  d2d1_private.h  dc_render_target.c  factory.c  geometry.c  hwnd_render_target.c  layer.c  mesh.c  render_target.c  state_block.c  stroke.c  wic_render_target.c
dll/directx/wine_vista/dwrite/: CMakeLists.txt  gdiinterop.c  opentype.c
dll/ntdll/: CMakeLists.txt
dll/ntdll/def/: ntdll.spec
dll/ntdll/rtl/: version.c
dll/win32/: CMakeLists.txt
dll/win32/advapi32/: advapi32.spec
dll/win32/avrt/: avrt.spec
dll/win32/comctl32/: commctrl.c
dll/win32/imm32/: utils.c
dll/win32/iphlpapi/: iphlpapi.spec
dll/win32/kernel32/: kernel32.spec
dll/win32/mpr/: mpr.spec
dll/win32/msvcrt/: msvcrt.spec
dll/win32/netapi32/: misc.c  netapi32.spec
dll/win32/ole32/: ole32.spec
dll/win32/powrprof/: powrprof.c  powrprof.spec
dll/win32/propsys/: propsys.spec
dll/win32/query/: query.spec
media/doc/: WINESYNC.txt
media/inf/: syssetup.inf
modules/: CMakeLists.txt
modules/drivers/: UCX01000.SYS  USBHUB3.SYS  USBXHCI.SYS  WdBoot.sys  WdFilter.sys  Wdf01000.sys  WdfLdr.sys  storahci.sys  usbd.sys  watchdog.sys  wfplwfs.sys
ntoskrnl/: ntos.cmake  ntoskrnl.spec
ntoskrnl/inbv/: bootanim.rc  longhorn.c
ntoskrnl/ke/: callout.c  ipi.c  procobj.c
ntoskrnl/lpc/: send.c
ntoskrnl/ps/: job.c  process.c
ntoskrnl/rtl/: misc.c
sdk/cmake/: CMakeMacros.cmake  baseaddress.cmake  baseaddress_msvc.cmake  config.cmake  gcc.cmake
(+94 files in other folders)
